--- a/project/views/freeldashb.ejs
+++ b/project/views/freeldashb.ejs
@@ -2,6 +2,7 @@
 <html lang="en"> 
   
 <head> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="stylef.css">   
   <link rel="stylesheet" href="responsive.css"> 
   <script src="https://cdn.socket.io/4.1.2/socket.io.min.js"></script>
